added projects into portfolio and changed the skills page alignment

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ permalink: /contact/
   <p class="contact-paragraph">Adios..</p>
   <!-- <hr> -->
   <div class="row">
-  <table border="0" class="center">
+  <table border="0" class="center contact-icons">
   <tr>
   <td class="col-xs-2">
     <a href="mailto:vineetsouri72@gmail.com?Subject=Hi%20Vineet" data-toggle="tooltip" data-placement="bottom" title="vineetsouri72@gmail.com">
