changes in blog

--- a/_posts/2015-05-30-Calculator.html
+++ b/_posts/2015-05-30-Calculator.html
@@ -8,5 +8,5 @@ categories: jekyll update
 <p>Completed my calculator app.</p>
 <p>The calculator app contains all the basic mathematical operations like PLUS,MINUS,DIVISION and MULTIPLICATION.</p>
 <p>The design of the app looks cool and the background is crazy..</p>
-<p>Please check the app from below location</p>
+<p>Please check the app from below link.</p>
 <p><a href="vineetsouri.github.io/NewCalci">Link to Calculator App.</a></p>
