Added about medetails and sttyled portfolio pages with links

--- a/about.html
+++ b/about.html
@@ -5,6 +5,35 @@ permalink: /about/
 ---
 
 <h1>About Me</h1>
-<p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p class="about-paragraph">
+<ul>
+  <li id="intro">
+    Hi I am Vineet Souri. A fun loving and Tech-Enthusiast. An  IT graduate(2012) from SIR C.R.R College of engineering with 74.1%. I completed my 12th from Sri Sai Chaitanya Junior College with 89.7%.
+  </li>
+</ul>
+</p>
+<p class="about-paragraph">
+<h2>Professional Experience :</h2>
+<ul>
+  <li id="intro">
+    Hacker at <span id = "imp">Code Astra</span> - India's first coding boot camp. (May 21 st – Present)
+  </li>
+  <li id="intro">
+    Analyst at <span id = "imp">Altisource Business Solution Pvt. Ltd</span>. (Jan 3 rd 2013 – May 19 th 2015)
+  </li>
+</ul>
+</p>
+<p class="about-paragraph">
+<h2>Hobbies :</h2>
+<ul>
+  <li id="intro">
+    I love solving Rubick's cube and my best solving a 3 X 3 is 30 sec.
+  </li>
+  <li id="intro">
+    I love reading Mythological novels.
+  </li>
+  <li id="intro">
+    I love playing Cricket.
+  </li>
+</ul>
+</p>
