--- a/portfolio.html
+++ b/portfolio.html
@@ -4,150 +4,79 @@ title: Vineet's Portfolio
 permalink: /portfolio/
 ---
 
-<!-- <h1>Portfolio</h1> -->
 <section id="portfolio">
   <div class="container">
     <div class="row">
       <h1>My Portfolio</h1>
     </div>
     <div class="row portfolio">
-      <div class="project">
-        <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-          <div class="well">
-            <div class="logo_container">
-              <img alt="Demo 1" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-            </div>
-            <h5>Demo Project</h5>
-            <div class="hidden-xs">This is my demo Project.</div>
-          </div>
-        </div>
-      </div>
-      <div class="project">
-        <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-          <div class="well">
-            <div class="logo_container">
-              <img alt="Demo 2" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-            </div>
-            <h5>Demo Project 2</h5>
-            <div class="hidden-xs">This is my demo Project.
+      <a target="_blank" href="https://socialmatrimony.herokuapp.com">
+        <div class="project">
+          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
+            <div class="well">
+              <div class="logo_container">
+                <img alt="social matrimony" class="img-responsive" src="/images/sm.png" />
+              </div>
+              <h5>Social Matrimony</h5>
+              <div class="hidden-xs">This is my final Project.</div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="project">
-        <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-          <div class="well">
-            <div class="logo_container">
-              <img alt="Demo 3" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
+      </a>
+      <a target="_blank" href="https://vineetsouri.github.io">
+        <div class="project">
+          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
+            <div class="well">
+              <div class="logo_container">
+                <img alt="personal website" class="img-responsive" src="/images/pw.png" />
+              </div>
+              <h5>Personal Website</h5>
+              <div class="hidden-xs">This is my Personal website.
+              </div>
             </div>
-            <h5>Demo Project 3</h5>
-            <div class="hidden-xs">This is my demo Project.
+          </div>
+        </div>
+      </a>
+      <a target="_blank" href="https://vineetsouri.github.io/New-Puzzle">
+        <div class="project">
+          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
+            <div class="well">
+              <div class="logo_container">
+                <img alt="image puzzle" class="img-responsive" src="/images/puzzle.png" />
+              </div>
+              <h5>Image Puzzle</h5>
+              <div class="hidden-xs">This is my Image Puzzle project.
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="project">
-        <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-          <div class="well">
-            <div class="logo_container">
-              <img alt="Demo 4" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
+      </a>
+      <a target="_blank" href="https://vineetsouri.github.io/psd-html">
+        <div class="project">
+          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
+            <div class="well">
+              <div class="logo_container">
+                <img alt="psd-html" class="img-responsive" src="/images/psd.png" />
+              </div>
+              <h5>PSD-HTML</h5>
+              <div class="hidden-xs">This is my PSD-HML Project.</div>
             </div>
-            <h5>Demo Project 4</h5>
-            <div class="hidden-xs">This is my demo Project.</div>
           </div>
         </div>
-      </div>
-      <div class="project">
-        <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-          <div class="well">
-            <div class="logo_container">
-              <img alt="Demo 5" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
+      </a>
+      <a target="_blank" href="http://vineetsouri.github.io/NewCalci/">
+        <div class="project">
+          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
+            <div class="well">
+              <div class="logo_container">
+                <img alt="Calci" class="img-responsive" src="/images/calci.png" />
+              </div>
+              <h5>Calculator Application</h5>
+              <div class="hidden-xs">This is my Calculator Project.</div>
             </div>
-            <h5>Demo Project 5</h5>
-            <div class="hidden-xs">This is my demo Project.</div>
           </div>
         </div>
-      </div>
-      <div class="project">
-        <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-          <div class="well">
-            <div class="logo_container">
-              <img alt="Demo 6" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-            </div>
-            <h5>Demo Project 6</h5>
-            <div class="hidden-xs">This is my demo Project. </div>
-          </div>
-        </div>
-      </div>
-      <div class="project">
-        <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-          <div class="well">
-            <div class="logo_container">
-              <img alt="Demo 7" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-            </div>
-            <h5>Demo Project 7</h5>
-            <div class="hidden-xs">This is my demo Project.
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="project">
-      <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-        <div class="well">
-          <div class="logo_container">
-            <img alt="Demo 8" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-          </div>
-          <h5>Demo Project 8</h5>
-          <div class="hidden-xs">This is my demo Project.
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="project">
-      <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-        <div class="well"><div class="logo_container">
-          <img alt="Demo 9" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-        </div>
-        <h5>Demo Project 9</h5>
-        <div class="hidden-xs">This is my demo Project.
-        </div>
-      </div>
+      </a>
     </div>
   </div>
-  <div class="project">
-    <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-      <div class="well">
-        <div class="logo_container">
-          <img alt="Demo 10" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-        </div>
-        <h5>Demo Project 10</h5>
-        <div class="hidden-xs">This is my demo Project.
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="project">
-    <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-      <div class="well">
-        <div class="logo_container">
-          <img alt="Demo 11" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-        </div>
-        <h5>Demo Project 11</h5>
-        <div class="hidden-xs">This is my demo Project.
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="project"><div class="proect_content col-xs-6 col-sm-4 col-md-3">
-    <div class="well">
-      <div class="logo_container">
-        <img alt="Demo 12" class="img-responsive" src="http://media.moddb.com/images/downloads/1/87/86682/bluedemobutton.jpg" />
-      </div>
-      <h5>Demo Project 12</h5>
-      <div class="hidden-xs">This is my demo Project.</div>
-    </div>
-  </div>
-</div>
-</div>
-</div>
-</section><!--portfolio-->
+</section>
