--- a/contact.html
+++ b/contact.html
@@ -4,42 +4,22 @@ title: Contact Me
 permalink: /contact/
 ---
 
-<span class="container">
-  <h1 class="contact">Contact</h1>
-  <p class="contact-paragraph">Seems like you want to contact me..</p>
-  <p class="contact-paragraph">Well, Go ahead and contact me from the below links..</p>
-  <p class="contact-paragraph">Adios..</p>
-  <!-- <hr> -->
-  <div class="row">
-  <table border="0" class="center contact-icons">
-  <tr>
-  <td class="col-xs-2">
-    <a href="mailto:vineetsouri72@gmail.com?Subject=Hi%20Vineet" data-toggle="tooltip" data-placement="bottom" title="vineetsouri72@gmail.com">
-      <i class="fa fa-paper-plane-o fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2">
-    <a target="_blank"href="https://github.com/vineetsouri">
-      <i class="fa fa-github fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2">
-    <a target="_blank"href="https://twitter.com/vineetsouri">
-      <i class="fa fa-twitter fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2">
-    <a target="_blank"href="https://www.facebook.com/vineet.souri">
-    <i class="fa fa-facebook fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2 col-xs-offset-1">
-    <a href="#">
-      <i class="fa fa-linkedin fa-4x"></i>
-    </a>
-    </td>
-    </tr>
-    </table>
+<form class="form-horizontal">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+    </div>
   </div>
-  <!-- <hr> -->
-</span>
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="Email">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default" id="sendMailer">Send a Mail</button>
+    </div>
+  </div>
+</form>
