--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,32 @@ permalink: /portfolio/
           </div>
         </div>
       </a>
+      <a target="_blank" href="https://businessmodelcanvass.herokuapp.com">
+        <div class="project">
+          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
+            <div class="well">
+              <div class="logo_container">
+                <img alt="BMC" class="img-responsive" src="/images/sm.png" />
+              </div>
+              <h5>Business Model Canvas</h5>
+              <div class="hidden-xs">Built using Rails framework.</div>
+            </div>
+          </div>
+        </div>
+      </a>
+      <a target="_blank" href="myshortfilm.herokuapp.com">
+        <div class="project">
+          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
+            <div class="well">
+              <div class="logo_container">
+                <img alt="SFA" class="img-responsive" src="/images/sm.png" />
+              </div>
+              <h5>Short Film Aggregation</h5>
+              <div class="hidden-xs">Built using Rails framework.</div>
+            </div>
+          </div>
+        </div>
+      </a>
       <a target="_blank" href="https://vineetsouri.github.io">
         <div class="project">
           <div class="proect_content col-xs-6 col-sm-4 col-md-3">
