--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@ permalink: /portfolio/
           <div class="proect_content col-xs-6 col-sm-4 col-md-3">
             <div class="well">
               <div class="logo_container">
-                <img alt="BMC" class="img-responsive" src="/images/sm.png" />
+                <img alt="BMC" class="img-responsive" src="/images/BMC.png" />
               </div>
               <h5>Business Model Canvas</h5>
               <div class="hidden-xs">Built using Rails framework.</div>
@@ -36,12 +36,12 @@ permalink: /portfolio/
           </div>
         </div>
       </a>
-      <a target="_blank" href="myshortfilm.herokuapp.com">
+      <a target="_blank" href="http://myshortfilm.herokuapp.com">
         <div class="project">
           <div class="proect_content col-xs-6 col-sm-4 col-md-3">
             <div class="well">
               <div class="logo_container">
-                <img alt="SFA" class="img-responsive" src="/images/sm.png" />
+                <img alt="SFA" class="img-responsive" src="/images/sfa.png" />
               </div>
               <h5>Short Film Aggregation</h5>
               <div class="hidden-xs">Built using Rails framework.</div>
