fixed the alignment issue in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@ permalink: /portfolio/
           </div>
         </div>
       </a>
-      <a target="_blank" href="http://vineetsouri.github.io/NewCalci/" id="calci">
+      <a target="_blank" href="http://vineetsouri.github.io/NewCalci/">
         <div class="project">
           <div class="proect_content col-xs-6 col-sm-4 col-md-3">
             <div class="well">
