--- a/skills.html
+++ b/skills.html
@@ -5,146 +5,146 @@ permalink: /skills/
 ---
 
 <div id="skills" class="container">
-  <h1>Skills</h1>
-  <hr>
   <div class="row">
-    <div class="col-md-6">
-      <ul>
-        <li>
-          <span class="skill">CSS3</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">HTML5</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">JavaScript</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">jQuery</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">Bootstrap</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">AJAX</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-      </ul>
+    <h1>Skills</h1>
+    <hr>
+    <div>
+      <h3><span id="imp">Web Technologies</span></h3>
     </div>
     <div class="col-md-6">
-      <ul>
-        <li>
-          <span class="skill">JSON</span>
-          <span class="rating"> 
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">MVC Framework</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">Ruby on Rails</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <!-- <li>
-          <span class="skill">Object Oriented Programming</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li> -->
-        <li>
-          <span class="skill">Ruby</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">Java</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-        <li>
-          <span class="skill">MySQL</span>
-          <span class="rating">
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star fa-2x fill"></i>
-            <i class="fa fa-star-o fa-2x fill"></i>
-          </span>
-        </li>
-      </ul>
+      <div class="skill_box">
+        <div class=" skill skill_name">HTML5</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="skill_box">
+        <div class=" skill skill_name">RUBY</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+              100%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="skill_box">
+        <div class=" skill skill_name">CSS3</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="skill_box">
+        <div class=" skill skill_name">Ruby on Rails</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h3><span id="imp">Scripting Languages</span></h3>
+    </div>
+    <div class="col-md-6">
+      <div class="skill_box">
+        <div class=" skill skill_name">JavaScript</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="skill_box">
+        <div class=" skill skill_name">jQuery</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h3><span id="imp">Framework</span></h3>
+    </div>
+    <div class="col-md-6">
+      <div class="skill_box">
+        <div class=" skill skill_name">Bootstrap</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="skill_box">
+        <div class=" skill skill_name">MVC</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h3><span id="imp">Databases</span></h3>
+    </div>
+    <div class="col-md-6">
+      <div class="skill_box">
+        <div class=" skill skill_name">MySQL</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="skill_box">
+        <div class=" skill skill_name">SQL Server</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="skill_box">
+        <div class=" skill skill_name">Oracle</div>
+        <div class="skill_rating">
+          <div class="progress">
+            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
