changed the views of portfolio and skills

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@ title: Contact Me
 permalink: /contact/
 ---
 
+<div style="width: 600px;"><div class="fb-page" data-href="https://www.facebook.com/facebook" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Vineet Facebook</a></blockquote></div></div></div>
 <span class="container">
   <h1 class="contact">Contact</h1>
   <p class="contact-paragraph">Seems like you want to contact me..</p>
@@ -11,34 +12,34 @@ permalink: /contact/
   <p class="contact-paragraph">Adios..</p>
   <!-- <hr> -->
   <div class="row">
-  <table border="0" class="center contact-icons">
-  <tr>
-  <td class="col-xs-2">
-    <a href="mailto:vineetsouri72@gmail.com?Subject=Hi%20Vineet" data-toggle="tooltip" data-placement="bottom" title="vineetsouri72@gmail.com">
-      <i class="fa fa-paper-plane-o fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2">
-    <a target="_blank"href="https://github.com/vineetsouri">
-      <i class="fa fa-github fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2">
-    <a target="_blank"href="https://twitter.com/vineetsouri">
-      <i class="fa fa-twitter fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2">
-    <a target="_blank"href="https://www.facebook.com/vineet.souri">
-    <i class="fa fa-facebook fa-4x"></i>
-    </a>
-    </td>
-    <td class="col-xs-2 col-xs-offset-1">
-    <a href="#">
-      <i class="fa fa-linkedin fa-4x"></i>
-    </a>
-    </td>
-    </tr>
+    <table border="0" class="center contact-icons">
+      <tr>
+        <td class="col-xs-2">
+          <a href="mailto:vineetsouri72@gmail.com?Subject=Hi%20Vineet" data-toggle="tooltip" data-placement="bottom" title="vineetsouri72@gmail.com">
+            <i class="fa fa-paper-plane-o fa-4x"></i>
+          </a>
+        </td>
+        <td class="col-xs-2">
+          <a target="_blank" href="https://github.com/vineetsouri">
+            <i class="fa fa-github fa-4x"></i>
+          </a>
+        </td>
+        <td class="col-xs-2">
+          <a target="_blank" href="https://twitter.com/vineetsouri">
+            <i class="fa fa-twitter fa-4x"></i>
+          </a>
+        </td>
+        <td class="col-xs-2">
+          <a target="_blank" href="https://www.facebook.com/vineet.souri">
+            <i class="fa fa-facebook fa-4x"></i>
+          </a>
+        </td>
+        <td class="col-xs-2 col-xs-offset-1">
+          <a target="_blank" href="https://in.linkedin.com/in/vineetsouri">
+            <i class="fa fa-linkedin fa-4x"></i>
+          </a>
+        </td>
+      </tr>
     </table>
   </div>
   <!-- <hr> -->
