--- a/portfolio.html
+++ b/portfolio.html
@@ -7,102 +7,112 @@ permalink: /portfolio/
 <section id="portfolio">
   <div class="container">
     <div class="row">
-      <h1>My Portfolio</h1>
+      <h1>Portfolio</h1>
     </div>
-    <div class="row portfolio">
-      <a target="_blank" href="https://socialmatrimony.herokuapp.com">
-        <div class="project">
-          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-            <div class="well">
-              <div class="logo_container">
-                <img alt="social matrimony" class="img-responsive" src="/images/sm.png" />
-              </div>
-              <h5>Social Matrimony</h5>
-              <div class="hidden-xs">This is my final Project.</div>
-            </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/BMC.png" alt="Business Model Canvas" class="img-responsive">
+          <div class="caption">
+            <h3>Business Model Canvas</h3>
+            <p>
+              An application where you can streamline your idea by
+              channelising your thought process and give it a definite structure.
+            </p>
+            <p><a target="_blank" href="https://businessmodelcanvass.herokuapp.com" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/BMC" class="btn btn-primary pull-right" role="button">Source Code</a></p>
           </div>
         </div>
-      </a>
-      <a target="_blank" href="https://businessmodelcanvass.herokuapp.com">
-        <div class="project">
-          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-            <div class="well">
-              <div class="logo_container">
-                <img alt="BMC" class="img-responsive" src="/images/BMC.png" />
-              </div>
-              <h5>Business Model Canvas</h5>
-              <div class="hidden-xs">Built using Rails framework.</div>
-            </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/sm.png" alt="Social Matrimony" class="img-responsive">
+          <div class="caption">
+            <h3>Social Matrimony</h3>
+            <p>
+              A matrimonial site which helps individuals to have
+              streamlined choices about their life partners.
+            </p>
+            <p><a target="_blank" href="https://socialmatrimony.herokuapp.com" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/social_matrimony" class="btn btn-primary pull-right" role="button">Source Code</a></p>
           </div>
         </div>
-      </a>
-      <a target="_blank" href="http://myshortfilm.herokuapp.com">
-        <div class="project">
-          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-            <div class="well">
-              <div class="logo_container">
-                <img alt="SFA" class="img-responsive" src="/images/sfa.png" />
-              </div>
-              <h5>Short Film Aggregation</h5>
-              <div class="hidden-xs">Built using Rails framework.</div>
-            </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/sfa.png" alt="Short Film Aggregation" class="img-responsive">
+          <div class="caption">
+            <h3>Short Film Aggregation</h3>
+            <p>
+              An application where you can add your favourite
+              shortfilms and watch them.
+            </p>
+            <p><a target="_blank" href="https://myshortfilm.herokuapp.com" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/SFA" class="btn btn-primary pull-right" role="button">Source Code</a></p>
           </div>
         </div>
-      </a>
-      <a target="_blank" href="https://vineetsouri.github.io">
-        <div class="project">
-          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-            <div class="well">
-              <div class="logo_container">
-                <img alt="personal website" class="img-responsive" src="/images/pw.png" />
-              </div>
-              <h5>Personal Website</h5>
-              <div class="hidden-xs">This is my Personal website.
-              </div>
-            </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/mysearch.png" alt="My YOUTUBE Search" class="img-responsive">
+          <div class="caption">
+            <h3>My YOUTUBE Search</h3>
+            <p>
+              Visit my personal website.
+            </p>
+            <p><a target="_blank" href="https://vineetsouri.github.io/MySearch" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/MySearch" class="btn btn-primary pull-right" role="button">Source Code</a></p>
           </div>
         </div>
-      </a>
-      <a target="_blank" href="https://vineetsouri.github.io/New-Puzzle">
-        <div class="project">
-          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-            <div class="well">
-              <div class="logo_container">
-                <img alt="image puzzle" class="img-responsive" src="/images/puzzle.png" />
-              </div>
-              <h5>Image Puzzle</h5>
-              <div class="hidden-xs">This is my Image Puzzle project.
-              </div>
-            </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/pw.png" alt="Personal Website" class="img-responsive">
+          <div class="caption">
+            <h3>Personal Website</h3>
+            <p>
+              Visit my personal website.
+            </p>
+            <p><a target="_blank" href="https://vineetsouri.github.io" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/vineetsouri.github.io" class="btn btn-primary pull-right" role="button">Source Code</a></p>
           </div>
         </div>
-      </a>
-      <a target="_blank" href="https://vineetsouri.github.io/psd-html">
-        <div class="project">
-          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-            <div class="well">
-              <div class="logo_container">
-                <img alt="psd-html" class="img-responsive" src="/images/psd.png" />
-              </div>
-              <h5>PSD-HTML</h5>
-              <div class="hidden-xs">This is my PSD-HML Project.</div>
-            </div>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/puzzle.png" alt="Image Puzzle" class="img-responsive">
+          <div class="caption">
+            <h3>Image Puzzle</h3>
+            <p>
+              A game built using jQuery.
+            </p>
+            <p><a target="_blank" href="https://vineetsouri.github.io/New-Puzzle" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/New-Puzzle" class="btn btn-primary pull-right" role="button">Source Code</a></p>
           </div>
         </div>
-      </a>
-      <a target="_blank" href="http://vineetsouri.github.io/NewCalci/">
-        <div class="project">
-          <div class="proect_content col-xs-6 col-sm-4 col-md-3">
-            <div class="well">
-              <div class="logo_container">
-                <img alt="Calci" class="img-responsive" src="/images/calci.png" />
-              </div>
-              <h5>Calculator Application</h5>
-              <div class="hidden-xs">This is my Calculator Project.</div>
-            </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/psd.png" alt="PSD-HTML" class="img-responsive">
+          <div class="caption">
+            <h3>PSD-HTML</h3>
+            <p>
+              A static website built using HTML,CSS and Bootstrap.
+            </p>
+            <p><a target="_blank" href="https://https://vineetsouri.github.io/psd-html" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/psd-html" class="btn btn-primary pull-right" role="button">Source Code</a></p>
           </div>
         </div>
-      </a>
+      </div>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img src="/images/calci.png" alt="Calculator" class="img-responsive">
+          <div class="caption">
+            <h3>Calculator</h3>
+            <p>
+              A cool looking calculator user interface which performs basic mathematical computations.
+            </p>
+            <p><a target="_blank" href="http://vineetsouri.github.io/NewCalci/" class="btn btn-primary" role="button">View Site</a> <a target="_blank" href="https://github.com/vineetsouri/NewCalci" class="btn btn-primary pull-right" role="button">Source Code</a></p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
