Removing facebook badge from caontact page

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact Me
 permalink: /contact/
 ---
 
-<div style="width: 600px;"><div class="fb-page" data-href="https://www.facebook.com/facebook" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Vineet Facebook</a></blockquote></div></div></div>
+<!-- <div style="width: 600px;"><div class="fb-page" data-href="https://www.facebook.com/facebook" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/facebook"><a href="https://www.facebook.com/facebook">Vineet Facebook</a></blockquote></div></div></div> -->
 <span class="container">
   <h1 class="contact">Contact</h1>
   <p class="contact-paragraph">Seems like you want to contact me..</p>
